# .. seealso:: https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

# .. seealso:: https://wheel.readthedocs.io/en/stable/
[bdist_wheel]
universal = 1

[aliases]
dists = clean --all sdist bdist_wheel

[metadata]
name = nof
#version = attr: anyconfig.VERSION
description = Network objects finder
project_urls =
    CI: Travis = https://travis-ci.org/ssato/nof
# TBD:
#    Download = https://pypi.python.org/pypi/anyconfig
    Download RPMs = https://copr.fedoraproject.org/coprs/ssato/extras/
    Bug Tracker = https://github.com/ssato/nof/issues
    Source = https://github.com/ssato/nof
long_description = file: README.rst
author = Satoru SATOH
author_email = ssato@redhat.com
maintainer = Satoru SATOH
maintainer_email = ssato@redhat.com
license = MIT
url = https://github.com/ssato/nof
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    Topic :: Utilities
    License :: OSI Approved :: MIT License

[options]
include_package_data = True
packages = find:

# minimum dependencies.
install_requires =
    setuptools
    anyconfig
    pyyaml
    networkx

[options.extras_require]
devel =
    coveralls
    flake8<3.5.0
    nose
    pylint
    pycodestyle<2.4.0

[options.packages.find]
where = src
exclude =
    tests
    tests.*

# vim:sw=4:ts=4:et:
